new file:   images/background/1.png 	new file:   images/background/2.png 	new file:   images/icons/downarrow.png 	modified:   index.html 	modified:   main.css

--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
-    <div class="wrapper">
-
-    </div>
+    <div class="wrapper"></div>
     <header>
         <section class="nav-section" id="section-0">
             <nav>
@@ -37,18 +35,22 @@
         </section>
         
         <section class="parallax-elem" id="section-1">
-
-        </section>
-        <section class="sect" id="section-2">
-            HELLO WORLD
-        </section>
-        <section class="sect" id="section-3">
-            GET UP
-        </section>
-        <section class="sect" id="section-4">
-            WORK HARD
+            <div class="header-btn-scroll">
+                <a href="#section-2" class="down-arrow">
+                    <img src="./images/icons/downarrow.png" alt="">
+                </a>
+            </div>
         </section>
     </header>
+    <section class="sect" id="section-2">
+        HELLO WORLD
+    </section>
+    <section class="sect" id="section-3">
+        GET UP
+    </section>
+    <section class="sect" id="section-4">
+        WORK HARD
+    </section>
 
 
     <script src="script.js"></script>
